# lightyear

./: .gitmodules  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  TODO.md
.cargo/: config.toml
.claude/agents/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  web-search-researcher.md
.claude/commands/: spec:review.md
.claude/commands/qrspi/: 1_question.md  1_question_b.md  2_research.md  3_design.md  4_structure.md  5_plan.md  6_worktree.md  7_implement.md  8_pr.md
.claude/skills/debugger/: SKILL.md
.claude/skills/debugger/lessons/: lightyear.md  voxel_engine.md
.claude/skills/qrspi_design/: SKILL.md
.claude/skills/qrspi_plan/: SKILL.md
.claude/skills/qrspi_questions/: SKILL.md
.claude/skills/qrspi_research/: SKILL.md
.claude/skills/qrspi_structure/: SKILL.md
assets/: default.ability_slots.ron
assets/abilities/: barrier.ability.ron  blink_strike.ability.ron  dash.ability.ron  dive_kick.ability.ron  fireball.ability.ron  ground_pound.ability.ron  punch.ability.ron  punch2.ability.ron  punch3.ability.ron  shield_bash.ability.ron  shockwave.ability.ron  speed_burst.ability.ron  teleport_burst.ability.ron  uppercut.ability.ron
assets/anims/humanoid/: humanoid.animset.ron  idle.anim.ron  punch.anim.ron  run.anim.ron  walk.anim.ron
assets/objects/: tree_circle.object.ron
assets/rigs/: humanoid.rig.ron
assets/shaders/: billboard.wgsl  sprite_rig_billboard.wgsl
assets/terrain/: overworld.terrain.ron
crates/client/: Cargo.toml
crates/client/src/: diagnostics.rs  gameplay.rs  map.rs
crates/client/tests/: chunk_sync.rs  map_transition.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: ability.rs  diagnostics.rs  hit_detection.rs  lib.rs  map.rs  physics.rs  reflect_loader.rs
crates/protocol/src/ability/: loading.rs  spawn.rs
crates/protocol/src/billboard/: billboard_material.rs  mod.rs  sprite_rig_material.rs
crates/protocol/src/map/: mod.rs
crates/protocol/src/vox_model/: meshing.rs  mod.rs  types.rs
crates/protocol/src/world_object/: loader.rs  mod.rs  plugin.rs  types.rs
crates/protocol/tests/: ability_systems.rs  physics_isolation.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  health_bar.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: chunk_entities.rs  diagnostics.rs  gameplay.rs  lib.rs  main.rs  map.rs  network.rs  persistence.rs
crates/server/tests/: integration.rs  map_transition.rs  rooms.rs  voxel_persistence.rs  world_persistence.rs
crates/sprite_rig/: Cargo.toml
crates/sprite_rig/src/: animation.rs  animset.rs  asset.rs  lib.rs  spawn.rs
crates/ui/src/: components.rs  lib.rs  state.rs
crates/ui/tests/: map_transition_state.rs
crates/voxel_map_engine/: Cargo.toml
crates/voxel_map_engine/examples/: editing.rs  multi_instance.rs  terrain.rs
crates/voxel_map_engine/src/: api.rs  chunk.rs  config.rs  generation.rs  instance.rs  lib.rs  lifecycle.rs  mesh_cache.rs  meshing.rs  palette.rs  persistence.rs  placement.rs  propagator.rs  terrain.rs  ticket.rs  types.rs
crates/voxel_map_engine/tests/: api.rs  lifecycle.rs
crates/web/: Cargo.toml
doc/bug/: 2026-03-25-client-voxel-edits-not-remeshing.md
doc/bugs/: lightyear-just-pressed-lost.md  stuck-movement-axes.md
doc/design/: 2026-03-14-archetype-from-asset-guide.md  ability-archetype-refactor.md
doc/plans/: 2026-02-28-voxel-map-engine.md  2026-03-02-replace-sdf-with-greedy-quads.md  2026-03-07-map-instance-physics-isolation-and-switching.md  2026-03-08-sprite-rig-animation-system.md  2026-03-09-map-as-directory-saving.md  2026-03-14-world-object-ron-assets.md  2026-03-15-ability-archetype-from-asset.md  2026-03-18-vox-model-loading-pipeline.md  2026-03-19-procedural-map-generation.md  2026-03-20-tracy-terrain-profiling.md  2026-03-21-chunk-ticket-system.md  2026-03-22-camera-rotation-q-e-lerp.md  2026-03-22-chunk-pipeline-optimizations.md  2026-03-26-gpu-billboarding-sprite-rig-efficiency.md  2026-03-30-multi-stage-generation-pipeline.md
doc/research/: 2026-03-02-replacing-sdf-with-greedy-quads.md  2026-03-03-physics-isolation-avian-collision-hooks.md  2026-03-07-map-instance-physics-isolation-and-switching.md  2026-03-07-sprite-rig-animation-overgrowth.md  2026-03-09-minecraft-style-map-directory-saving.md  2026-03-13-vox-loading-without-scenes.md  2026-03-13-vox-model-loading-rendering-pipeline.md  2026-03-13-world-object-ron-assets.md  2026-03-15-ability-archetype-refactor-analysis.md  2026-03-17-lua-scripted-client-ui.md  2026-03-17-singleplayer-implementation-analysis.md  2026-03-18-procedural-map-generation.md  2026-03-20-minecraft-chunk-ticket-system.md  2026-03-20-performance-profiling-tools.md  2026-03-21-camera-rotation-q-e-lerp.md  2026-03-21-overworld-chunk-loading-failure.md  2026-03-26-game-optimization-techniques.md  2026-03-26-gpu-billboarding-sprite-rig-efficiency.md  2026-03-26-multi-stage-generation-pipeline.md
doc/tasks/singleplayer-mode/: 01-questions.md  02-research.md  03-design.md
