[workspace]
members = [
    "crates/protocol",
    "crates/client",
    "crates/server",
    "crates/web",
    "crates/render",
    "crates/ui",
    "crates/voxel_map_engine",
]
exclude = [
    "git/avian",
    "git/bevy",
    "git/bevy_fsl_box_frame",
    "git/bevy_metrics_dashboard", 
    "git/bevy_triplanar_splatting",
    "git/block-mesh-rs",
    "git/fast-surface-nets-rs",
    "git/grid-tree-rs",
    "git/height-mesh-rs",
    "git/lightyear",
    "git/ndcopy-rs",
    "git/ndshape-rs",
    "git/qef",
    "git/rkyv_impl",
    "git/smooth-bevy-cameras",
    "git/vector_expr",
]
resolver = "2"

[workspace.dependencies]
avian3d = { version = "0.4.1", default-features = false, features = ["3d", "f32", "parry-f32", "default-collider", "collider-from-mesh"] }
bevy = { version = "0.17.2", default-features = false }
leafwing-input-manager = "0.19"
voxel_map_engine = { path = "crates/voxel_map_engine" }
lightyear = { version = "0.25.5", features = ["leafwing", "raw_connection"] }
protocol = { path = "crates/protocol" }
ron = "0.9"
bevy_common_assets = { version = "0.14", features = ["ron"] }
serde = "1.0"

# WASM-specific dependencies
wasm-bindgen = "=0.2.105"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Test dependencies
approx = "0.5.1"
mock_instant = "0.6"
test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }

[patch.crates-io]
ndshape = { path = "git/ndshape-rs" }
ndcopy = { path = "git/ndcopy-rs" }

[profile.test]
opt-level = 1
debug = true

[profile.dev]
opt-level = 1
debug = true
lto = false

# WASM-specific test profile: optimize for size and reduce memory usage
[profile.wasm-test]
inherits = "test"
debug = false                # No debug info to save memory
strip = true                 # Strip symbols
lto = "thin"                 # Thin LTO for smaller binary

[profile.dev.package."*"]
opt-level = 3
