[package]
name = "render"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, default-features = true }
lightyear = { workspace = true, features = ["frame_interpolation"] }
protocol = { workspace = true }
sprite_rig = { path = "../sprite_rig" }
