[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, default-features = true, features = ["file_watcher"] }
voxel_map_engine = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["server", "netcode", "udp", "webtransport", "websocket", "leafwing", "replication" ] }
lightyear_crossbeam = "0.26.0"
protocol = { workspace = true }
anyhow = "1.0"
async-compat = "0.2"
avian3d = { workspace = true }
bincode = "1.3"
ron = { workspace = true }
serde = { workspace = true }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
ndshape = { path = "../../git/ndshape-rs" }
approx = { workspace = true }
mock_instant = { workspace = true }
test-log = { workspace = true }
protocol = { workspace = true, features = ["test_utils"] }
client = { path = "../client" }
ui = { path = "../ui" }
lightyear_crossbeam = "0.26.0"
lightyear_raw_connection = { version = "0.26.0", features = ["client", "server"] }
