[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
tracy = ["bevy/trace_tracy", "voxel_map_engine/tracy", "tracy-client/enable"]

[dependencies]
bevy = { workspace = true, default-features = true, features = ["file_watcher"] }
voxel_map_engine = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["server", "netcode", "udp", "webtransport", "websocket", "leafwing", "replication", "crossbeam" ] }
lightyear_crossbeam = { workspace = true }
protocol = { workspace = true }
anyhow = "1.0"
async-compat = "0.2"
avian3d = { workspace = true }
bincode = "1.3"
ron = { workspace = true }
serde = { workspace = true }
tracy-client = { workspace = true }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
ndshape = { path = "../../git/ndshape-rs" }
approx = { workspace = true }
mock_instant = { workspace = true }
test-log = { workspace = true }
protocol = { workspace = true, features = ["test_utils"] }
client = { path = "../client" }
ui = { path = "../ui" }
